small changes in settings

--- a/www/_themes/acadia/theme.yaml
+++ b/www/_themes/acadia/theme.yaml
@@ -14,5 +14,5 @@ favorite_sites:
 site_twitter: statamic
 
 # used in the feed
-site_language: en
+site_language: es
 contact_email: you@example.com
