arreglando el lio de repos

--- a/www/_config/settings.yaml
+++ b/www/_config/settings.yaml
@@ -30,7 +30,7 @@ _content_root: _content
 _site_url: http://statamic.com
 
 # Folder name of your desired theme
-_theme: acadia
+_theme: propio
 
 # Entries should include timestamp YYYY-MM-DD-HHII
 _entry_timestamps: false
