changes in reseraches and publications

--- a/www/_config/fieldsets/page.yaml
+++ b/www/_config/fieldsets/page.yaml
@@ -10,6 +10,7 @@ fields:
     destination: assets/img/blog/
 
   content:
+    type: redactor
     display: Page Content
     required: false
     default:
