changes in styles

--- a/www/_config/fieldsets/news.yaml
+++ b/www/_config/fieldsets/news.yaml
@@ -18,5 +18,10 @@ fields:
     type: users
     required: true
     hide: true
+  image:
+    display: Imagen de Cabecera
+    type: file
+    allowed: [png, gif, jpg, jpeg]
+    destination: assets/img
 
 hide: true
