author and month

--- a/www/_config/fieldsets/post.yaml
+++ b/www/_config/fieldsets/post.yaml
@@ -26,5 +26,6 @@ fields:
 		type: users
 		required: true
 		hide: true
-
-hide: true
+  month:
+    type: hidden
+    default: {{ current_date format="FY"}}
