--- a/www/_config/settings.yaml
+++ b/www/_config/settings.yaml
@@ -48,6 +48,8 @@ _timezone: Europe/Madrid
 _taxonomy:
   - categories
   - tags
+  - author
+  - month
 
 # Turns your slugs into pretty urls (spaces become "-" instead of %20)
 _taxonomy_slugify: false
@@ -118,7 +120,7 @@ _environments:
     - '*.com'
 
 # Set to 'true' if you want to log system messages
-_log_enabled: false
+_log_enabled: true
 
 # What's the least-serious level of message you wish to record to the log?
 # Your available options:
