--- a/www/_config/settings.yaml
+++ b/www/_config/settings.yaml
@@ -21,7 +21,7 @@ _language: es
 _site_root: /
 
 # Name of your site
-_site_name: Historia contemporánea
+_site_name: Redes de poder. España y el mundo atlántico
 
 # Change the folder name for your content directory
 _content_root: _content
