adjusting post title's width

--- a/www/_config/users/elena.yaml
+++ b/www/_config/users/elena.yaml
@@ -5,6 +5,6 @@ email: elena.sanchezmadariaga@gmail.com
 roles:
   - member
   - admin
-password: "elena"
-
+password: elena
+_uid: JHc9QP5411fa4d457d8tbtdmmxH
 ---
