--- a/www/_config/users/irene.yaml
+++ b/www/_config/users/irene.yaml
@@ -5,6 +5,6 @@ email: irene.moreno@uam.com
 roles:
   - member
   - admin
-password: "irene"
-
+password: irene
+_uid: CrB0Kt5411fa4d4a3d6zwww6dNZ
 ---
