--- a/www/_config/users/javier.yaml
+++ b/www/_config/users/javier.yaml
@@ -5,6 +5,6 @@ email: javier.perez@uam.es
 roles:
   - member
   - admin
-password: "javier"
-
+password: javier
+_uid: 6BN7815411fa4d4ddd4VGWZdrbd
 ---
