--- a/www/_config/users/juanluis.yaml
+++ b/www/_config/users/juanluis.yaml
@@ -5,6 +5,6 @@ email: juanluis.pan@uam.es
 roles:
   - member
   - admin
-password: "juanluis"
-
+password: juanluis
+_uid: dnd33b5411fa4d51496WwbBCkfV
 ---
