--- a/www/_config/users/pilar.yaml
+++ b/www/_config/users/pilar.yaml
@@ -5,6 +5,6 @@ email: pilar.toboso@uam.es
 roles:
   - member
   - admin
-password: "pilar"
-
+password: pilar
+_uid: 0YsGff5411fa4d56289RhzljHJ4
 ---
